--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,8 +92,13 @@ if(${CMAKE_BUILD_TYPE} MATCHES "Release")
 elseif(${CMAKE_BUILD_TYPE} MATCHES "Debug")
 	set(wxWidgets_CONFIGURATION mswud)
 endif()
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 set(wxWidgets_EXCLUDE_COMMON_LIBRARIES TRUE)
 find_package(wxWidgets COMPONENTS core base aui html xml net adv gl stc scintilla png tiff regex expat REQUIRED)
+else()
+find_package(wxWidgets COMPONENTS core base aui html xml net adv gl stc scintilla REQUIRED)
+endif()
+
 include(${wxWidgets_USE_FILE})
 set(wxWidgets_USE_STATIC ON)
 if (APPLE)
@@ -256,8 +261,8 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     file(GLOB OPENCL_LIBRARIES ${FluoRender_SOURCE_DIR}/fluorender/OpenCL/lib/x86/*.lib)
   endif()
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  include(${CMAKE_SOURCE_DIR}/FindOpenCL.cmake)
-  include_directories( ${OPENCL_INCLUDE_DIRS})
+#  include(${CMAKE_SOURCE_DIR}/FindOpenCL.cmake)
+#  include_directories( ${OPENCL_INCLUDE_DIRS})  
 endif()
 
 #freetype
