--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@
 #DEALINGS IN THE SOFTWARE.
 #*/
 
-#This is an CMake configuration file for FluoRender
+#This is an CMake configuration file for VVDViewer
 
 cmake_minimum_required ( VERSION 2.8.8 )
 
@@ -37,7 +37,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 	endif()
 endif()
 
-project ( FluoRender )
+project ( VVDViewer )
 
 IF((COMMAND cmake_policy) AND NOT (CMAKE_MAJOR_VERSION LESS 3))
     CMAKE_POLICY(SET CMP0040 NEW)
@@ -62,7 +62,7 @@ else()
       add_definitions(-DFLUORENDER_ARCH="32bit")
 endif()
 
-add_definitions(-DFLUORENDER_TITLE="FluoRender")
+add_definitions(-DFLUORENDER_TITLE="VVDViewer")
 
 add_definitions(-DVERSION_MAJOR=2)                   #Be sure to update the Versions and Date for each release!!!!
 add_definitions(-DVERSION_MINOR=19)					 #
@@ -141,11 +141,11 @@ find_package(ZLIB REQUIRED)
 add_definitions(-DTEEM_ZLIB=1)
 include_directories(${ZLIB_INCLUDE_DIRS})
 
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/teem)
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/teem/Biff)
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/teem/Air)
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/teem/Hest)
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/teem/Nrrd)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/teem)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/teem/Biff)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/teem/Air)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/teem/Hest)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/teem/Nrrd)
 file(GLOB airsrc fluorender/teem/Air/*.c)
 file(GLOB airhdr fluorender/teem/Air/*.h)
 file(GLOB hestsrc fluorender/teem/Hest/*.c)
@@ -159,8 +159,8 @@ add_library(TEEM_OBJ OBJECT
       ${airhdr} ${hesthdr} ${nrrdhdr} ${biffhdr})
 
 #glew
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/glew)
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/glew/GL)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/glew)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/glew/GL)
 file(GLOB gl_srcs fluorender/glew/*.c)
 file(GLOB gl_hdrs1 fluorender/glew/*.h)
 file(GLOB gl_hdrs2 fluorender/glew/GL/*.h)
@@ -168,16 +168,16 @@ add_library(GLEW_OBJ OBJECT
       ${gl_srcs} ${gl_hdrs1} ${gl_hdrs2})
 
 #pole
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/pole)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/pole)
 file(GLOB pole_srcs fluorender/pole/pole.cpp)
 file(GLOB pole_hdrs fluorender/pole/pole.h)
 add_library(POLE_OBJ OBJECT ${pole_srcs} ${pole_hdrs})
 
 #ffmpeg
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  include_directories(${FluoRender_SOURCE_DIR}/fluorender/ffmpeg/Win64/include)
-  file(GLOB ffmpeg_LIBS_D ${FluoRender_SOURCE_DIR}/fluorender/ffmpeg/Win64/lib/Debug/*.lib)
-  file(GLOB ffmpeg_LIBS_R ${FluoRender_SOURCE_DIR}/fluorender/ffmpeg/Win64/lib/Release/*.lib)
+  include_directories(${VVDViewer_SOURCE_DIR}/fluorender/ffmpeg/Win64/include)
+  file(GLOB ffmpeg_LIBS_D ${VVDViewer_SOURCE_DIR}/fluorender/ffmpeg/Win64/lib/Debug/*.lib)
+  file(GLOB ffmpeg_LIBS_R ${VVDViewer_SOURCE_DIR}/fluorender/ffmpeg/Win64/lib/Release/*.lib)
   set(ffmpeg_LIBRARIES)
   foreach (f ${ffmpeg_LIBS_D})
     set(ffmpeg_LIBRARIES ${ffmpeg_LIBRARIES} debug ${f})
@@ -187,8 +187,8 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   endforeach()
   add_definitions(-D__STDC_CONSTANT_MACROS)
 else()
-  include_directories(${FluoRender_SOURCE_DIR}/fluorender/ffmpeg/OSX/include)
-  file(GLOB ffmpeg_LIBRARIES ${FluoRender_SOURCE_DIR}/fluorender/ffmpeg/OSX/lib/*.a)
+  include_directories(${VVDViewer_SOURCE_DIR}/fluorender/ffmpeg/OSX/include)
+  file(GLOB ffmpeg_LIBRARIES ${VVDViewer_SOURCE_DIR}/fluorender/ffmpeg/OSX/lib/*.a)
 endif()
 
 #curl
@@ -202,7 +202,7 @@ include_directories(${CURL_INCLUDE_DIR})
 find_package(OpenSSL REQUIRED)
 include_directories(${OPENSSL_INCLUDE_DIR})
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-file(GLOB SSL_DEP_LIBRARIES ${FluoRender_SOURCE_DIR}/fluorender/libcurl/OSX/*.a)
+file(GLOB SSL_DEP_LIBRARIES ${VVDViewer_SOURCE_DIR}/fluorender/libcurl/OSX/*.a)
 endif()
 
 #libjpeg
@@ -212,64 +212,64 @@ find_package(JPEG REQUIRED)
 include_directories(${JPEG_INCLUDE_DIR})
 
 #FluoRender
-include_directories(${FluoRender_SOURCE_DIR}/fluorender)
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/FluoRender)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/FluoRender)
 
 #Formats
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/FluoRender/Formats)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/Formats)
 file(GLOB fmt_src fluorender/FluoRender/Formats/*.cpp)
 file(GLOB fmt_hdr fluorender/FluoRender/Formats/*.h)
 add_library(FORMATS_OBJ OBJECT
       ${fmt_src} ${fmt_hdr})
 
 #Tracking
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/FluoRender/Tracking)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/Tracking)
 file(GLOB trk_src fluorender/FluoRender/Tracking/*.cpp)
 file(GLOB trk_hdr fluorender/FluoRender/Tracking/*.h)
 add_library(TRACKING_OBJ OBJECT
       ${trk_src} ${trk_hdr})
 
 #Animators
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/FluoRender/Animators)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/Animators)
 file(GLOB ani_src fluorender/FluoRender/Animator/*.cpp)
 file(GLOB ani_hdr fluorender/FluoRender/Animator/*.h)
 add_library(ANIMATORS_OBJ OBJECT
       ${ani_src} ${ani_hdr})
 
 #NV
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/FluoRender/NV)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/NV)
 file(GLOB nv_src fluorender/FluoRender/NV/*.cpp)
 file(GLOB nv_hdr fluorender/FluoRender/NV/*.h)
 add_library(NV_OBJ OBJECT
       ${nv_src} ${nv_hdr})
 
 #FLIVR
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/FluoRender/FLIVR)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/FLIVR)
 file(GLOB fli_src fluorender/FluoRender/FLIVR/*.cpp)
 file(GLOB fli_hdr fluorender/FluoRender/FLIVR/*.h)
 add_library(FLIVR_OBJ OBJECT
       ${fli_src} ${fli_hdr})
 
 #Converters
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/FluoRender/Converters)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/Converters)
 file(GLOB cvt_src fluorender/FluoRender/Converters/*.cpp)
 file(GLOB cvt_hdr fluorender/FluoRender/Converters/*.h)
 add_library(CONVERTERS_OBJ OBJECT
       ${cvt_src} ${cvt_hdr})
 
 #images
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/FluoRender/img)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/img)
 file(GLOB pngs_hdr fluorender/FluoRender/img/*.h)
 file(GLOB pngs_src fluorender/FluoRender/img/*.cpp)
 add_library(IMAGES_OBJ OBJECT  ${pngs_hdr} ${pngs_src})
 
 #OpenCL
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  include_directories(${FluoRender_SOURCE_DIR}/fluorender/OpenCL/include)
+  include_directories(${VVDViewer_SOURCE_DIR}/fluorender/OpenCL/include)
   if(${ARCHITECTURE} MATCHES 64)
-    file(GLOB OPENCL_LIBRARIES ${FluoRender_SOURCE_DIR}/fluorender/OpenCL/lib/x86_64/*.lib)
+    file(GLOB OPENCL_LIBRARIES ${VVDViewer_SOURCE_DIR}/fluorender/OpenCL/lib/x86_64/*.lib)
   elseif(${ARCHITECTURE} MATCHES 32)
-    file(GLOB OPENCL_LIBRARIES ${FluoRender_SOURCE_DIR}/fluorender/OpenCL/lib/x86/*.lib)
+    file(GLOB OPENCL_LIBRARIES ${VVDViewer_SOURCE_DIR}/fluorender/OpenCL/lib/x86/*.lib)
   endif()
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 #  include(${CMAKE_SOURCE_DIR}/FindOpenCL.cmake)
@@ -277,9 +277,9 @@ elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 endif()
 
 #freetype
-include_directories(${FluoRender_SOURCE_DIR}/fluorender/freetype/include)
+include_directories(${VVDViewer_SOURCE_DIR}/fluorender/freetype/include)
 if (WIN32)
-    file(GLOB FREETYPE_LIBRARIES ${FluoRender_SOURCE_DIR}/fluorender/freetype/lib/*.lib)
+    file(GLOB FREETYPE_LIBRARIES ${VVDViewer_SOURCE_DIR}/fluorender/freetype/lib/*.lib)
 else()
     find_package(Freetype REQUIRED)
     include_directories(${FREETYPE_INCLUDE_DIRS})
@@ -308,7 +308,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    SET( MACOSX_BUNDLE_ICON_FILE ${ICON_FILE_PATH} )
    SET_SOURCE_FILES_PROPERTIES(${ICON_FILE_PATH} PROPERTIES 
       MACOSX_BUNDLE_LOCATION Resources)
-   add_executable(FluoRender MACOSX_BUNDLE
+   add_executable(VVDViewer MACOSX_BUNDLE
       ${src} ${hdr} ${rsc}
       $<TARGET_OBJECTS:IMAGES_OBJ>
       $<TARGET_OBJECTS:CONVERTERS_OBJ>
@@ -357,13 +357,13 @@ elseif(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 		  SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -MT")
 		  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -MT")
 	  endif()
-      include_directories(${FluoRender_SOURCE_DIR}/fluorender/FluoRender/WacUtils)
-      include_directories(${FluoRender_SOURCE_DIR}/fluorender/Wacom/Include)
+      include_directories(${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/WacUtils)
+      include_directories(${VVDViewer_SOURCE_DIR}/fluorender/Wacom/Include)
       file(GLOB wac_src fluorender/FluoRender/WacUtils/*.cpp)
       file(GLOB wac_hdr fluorender/FluoRender/WacUtils/*.h)
 	  add_library(WACUTILS_OBJ OBJECT
 			     ${wac_src} ${wac_hdr})
-      add_executable(FluoRender WIN32
+      add_executable(VVDViewer WIN32
           	  ${src} ${hdr} ${rsc}
 		  $<TARGET_OBJECTS:IMAGES_OBJ>
 		  $<TARGET_OBJECTS:CONVERTERS_OBJ>
@@ -413,7 +413,7 @@ endif()
 
 #link the libraries
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-	target_link_libraries(FluoRender
+	target_link_libraries(VVDViewer
 	   ${CURL_LIBRARIES}
 	   ${JPEG_LIBRARIES}
 	   ${ZLIB_LIBRARIES}
@@ -425,7 +425,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 	   ${FREETYPE_LIBRARIES}
 	   ${wxWidgets_LIBRARIES})
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-	target_link_libraries(FluoRender
+	target_link_libraries(VVDViewer
 	   ${CURL_LIBRARIES}
 	   ${JPEG_LIBRARIES}
 	   ${ZLIB_LIBRARIES}
@@ -442,40 +442,40 @@ endif()
 #build OpenCL examples copies.
 
 #copy openCL examples to the binary directory
-add_custom_command(TARGET FluoRender PRE_BUILD
+add_custom_command(TARGET VVDViewer PRE_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy_directory
-  "${FluoRender_SOURCE_DIR}/CL_code"
-  "$<TARGET_FILE_DIR:FluoRender>/CL_code")
-add_custom_command(TARGET FluoRender PRE_BUILD
+  "${VVDViewer_SOURCE_DIR}/CL_code"
+  "$<TARGET_FILE_DIR:VVDViewer>/CL_code")
+add_custom_command(TARGET VVDViewer PRE_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy_directory
-  "${FluoRender_SOURCE_DIR}/CL_code"
+  "${VVDViewer_SOURCE_DIR}/CL_code"
   "${CMAKE_BINARY_DIR}/CL_code")
    
 #copy font dir to the binary directory
-add_custom_command(TARGET FluoRender PRE_BUILD
+add_custom_command(TARGET VVDViewer PRE_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy_directory
-  "${FluoRender_SOURCE_DIR}/Fonts"
-  "$<TARGET_FILE_DIR:FluoRender>/Fonts")
-add_custom_command(TARGET FluoRender PRE_BUILD
+  "${VVDViewer_SOURCE_DIR}/Fonts"
+  "$<TARGET_FILE_DIR:VVDViewer>/Fonts")
+add_custom_command(TARGET VVDViewer PRE_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy_directory
-  "${FluoRender_SOURCE_DIR}/Fonts"
+  "${VVDViewer_SOURCE_DIR}/Fonts"
   "${CMAKE_BINARY_DIR}/Fonts")
   
 #copy script dir to the binary directory
-add_custom_command(TARGET FluoRender PRE_BUILD
+add_custom_command(TARGET VVDViewer PRE_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy_directory
-  "${FluoRender_SOURCE_DIR}/Scripts"
-  "$<TARGET_FILE_DIR:FluoRender>/Scripts")
+  "${VVDViewer_SOURCE_DIR}/Scripts"
+  "$<TARGET_FILE_DIR:VVDViewer>/Scripts")
 
 #copy executables (Windows)
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-	add_custom_command(TARGET FluoRender PRE_BUILD
+	add_custom_command(TARGET VVDViewer PRE_BUILD
 		COMMAND ${CMAKE_COMMAND} -E copy_directory
-		"${FluoRender_SOURCE_DIR}/Executables"
-		"$<TARGET_FILE_DIR:FluoRender>/Executables")
-	add_custom_command(TARGET FluoRender PRE_BUILD
+		"${VVDViewer_SOURCE_DIR}/Executables"
+		"$<TARGET_FILE_DIR:VVDViewer>/Executables")
+	add_custom_command(TARGET VVDViewer PRE_BUILD
 		COMMAND ${CMAKE_COMMAND} -E copy_directory
-		"${FluoRender_SOURCE_DIR}/Executables"
+		"${VVDViewer_SOURCE_DIR}/Executables"
 		"${CMAKE_BINARY_DIR}/Executables")
 endif()
    
@@ -484,10 +484,10 @@ endif()
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 	file(GLOB ffmpeg_DLLS fluorender/bin/*.dll)
 	foreach (f ${ffmpeg_DLLS})
-		add_custom_command(TARGET FluoRender PRE_BUILD
+		add_custom_command(TARGET VVDViewer PRE_BUILD
 			COMMAND ${CMAKE_COMMAND} -E copy  
 			${f}
-			$<TARGET_FILE_DIR:FluoRender>)
+			$<TARGET_FILE_DIR:VVDViewer>)
 	endforeach()
 endif()
    
@@ -495,14 +495,14 @@ endif()
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 	file(GLOB settings_files Settings/*)
 	foreach (f ${settings_files})
-		add_custom_command(TARGET FluoRender PRE_BUILD
+		add_custom_command(TARGET VVDViewer PRE_BUILD
 			COMMAND ${CMAKE_COMMAND} -E copy  
 			${f}
-			$<TARGET_FILE_DIR:FluoRender>)
+			$<TARGET_FILE_DIR:VVDViewer>)
 	endforeach()
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-	add_custom_command(TARGET FluoRender PRE_BUILD
+	add_custom_command(TARGET VVDViewer PRE_BUILD
 		COMMAND ${CMAKE_COMMAND} -E copy_directory
-		"${FluoRender_SOURCE_DIR}/Settings"
-		"$<TARGET_FILE_DIR:FluoRender>/../Resources")
+		"${VVDViewer_SOURCE_DIR}/Settings"
+		"$<TARGET_FILE_DIR:VVDViewer>/../Resources")
 endif()
