improve movie view

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -314,8 +314,20 @@ else()
 endif()
 
 #other sources
-file(GLOB src ${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/*.cpp)
-file(GLOB hdr ${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/*.h)
+file(GLOB srcall ${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/*.cpp)
+set(src)
+foreach(f ${srcall})
+  if( (NOT f MATCHES "Main.cpp$") AND (f MATCHES ".cpp$") )
+    set(src ${src} ${f})
+  endif()
+endforeach()
+file(GLOB hdrall ${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/*.h)
+set(hdr)
+foreach(f ${hdrall})
+  if( (NOT f MATCHES "Main.h$") AND (f MATCHES ".h$") )
+    set(hdr ${hdr} ${f})
+  endif()
+endforeach()
 file(GLOB rsc ${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/img/*.xpm)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
@@ -432,8 +444,8 @@ elseif(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 		  SET(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /LTCG /FORCE:MULTIPLE")
 		  SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -MDd")
 		  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -MDd")
-		  SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -MT /O2 /Ob2 /Oi /Ot /Oy /GT /GL")
-		  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -MT /O2 /Ob2 /Oi /Ot /Oy /GT /GL")
+		  SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -MT /O2 /Ob2 /Oi /Ot /Oy /GT /GL /Qpar")
+		  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -MT /O2 /Ob2 /Oi /Ot /Oy /GT /GL /Qpar")
 	  endif()
       add_executable(VVDViewer WIN32
           			 ${VVDViewer_SOURCE_DIR}/fluorender/FluoRender/Main.h
